--- a/Src/WindowsDeviceRecoveryTool/MainWindow.xaml
+++ b/Src/WindowsDeviceRecoveryTool/MainWindow.xaml
@@ -1,11 +1,14 @@
 <Window
-	x:Class="Microsoft.WindowsDeviceRecoveryTool.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	x:Class="Microsoft.WindowsDeviceRecoveryTool.MainWindow" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	Width="840"
 	Height="472"
 	MinWidth="1100"
 	MinHeight="640"
 	Icon="Resources/app_icon.ico"
-	Style="{DynamicResource WindowStyle}" xmlns:windowsdevicerecoverytool="clr-namespace:Microsoft.WindowsDeviceRecoveryTool"
+	Style="{DynamicResource WindowStyle}" 
+    xmlns:windowsdevicerecoverytool="clr-namespace:Microsoft.WindowsDeviceRecoveryTool"
 	Title="{Binding AppName}">
 	<Grid
 		Name="Root"
