--- a/Src/WindowsDeviceRecoveryTool/States/Settings/NetworkView.xaml
+++ b/Src/WindowsDeviceRecoveryTool/States/Settings/NetworkView.xaml
@@ -2,7 +2,8 @@
 	x:Class="Microsoft.WindowsDeviceRecoveryTool.States.Settings.NetworkView" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:localization="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Localization;assembly=Microsoft.WindowsDeviceRecoveryTool.Localization" xmlns:textBoxes="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Controls.TextBoxes" xmlns:validation="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Controls.TextBoxes.Validation" xmlns:threading="clr-namespace:System.Windows.Threading;assembly=WindowsBase" xmlns:controls="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Controls"
 	KeyboardNavigation.TabNavigation="Continue"
 	Width="250"
-	HorizontalAlignment="Left" xmlns:settings="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Settings"
+	HorizontalAlignment="Left" 
+    xmlns:settings="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Settings"
 	Loaded="NetworkView_OnLoaded"
 	Unloaded="NetworkView_OnUnloaded">
 	<FrameworkElement.Resources>
@@ -16,7 +17,7 @@
 	<TextBlock
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,0,0,5"
-		Text="{localization:Localization UseProxyServer}" />
+		Text="UseProxyServer" />
 	<StackPanel
 		Orientation="Horizontal">
 		<TextBlock
@@ -27,10 +28,10 @@
 			Margin="0,0,20,0"
 			Text="{Binding UseManualProxy, Converter={StaticResource BoolToOffOnConverter}}" />
 		<controls:InvokableToggleButton
-			Name="UseManualProxyCheckBox"
+			x:Name="UseManualProxyCheckBox"
 			Style="{DynamicResource ToggleSwitchStyle}"
 			IsChecked="{Binding UseManualProxy, Mode=TwoWay}"
-			AutomationProperties.Name="{localization:Localization UseProxyServer}" />
+			AutomationProperties.Name="UseProxyServer" />
 	</StackPanel>
 	<Grid>
 		<Grid.ColumnDefinitions>
@@ -47,16 +48,16 @@
 				VerticalAlignment="Center"
 				Style="{DynamicResource BasicTextStyle}"
 				Margin="0,10,0,5"
-				Text="{localization:Localization AddressForm}" />
+				Text="AddressForm" />
 			<AdornerDecorator>
-				<validation:ValidatedTextBox
+				<TextBox
 					Name="AddressBox"
 					Style="{DynamicResource TextBox}"
 					TextWrapping="NoWrap"
 					HorizontalAlignment="Left"
 					Width="165"
 					IsEnabled="{Binding IsChecked, ElementName=UseManualProxyCheckBox}"
-					AutomationProperties.Name="{localization:Localization AddressForm}">
+					AutomationProperties.Name="AddressForm">
 					<TextBox.Text>
 						<Binding
 							Path="ProxyAddress"
@@ -66,7 +67,7 @@
 							</Binding.ValidationRules>
 						</Binding>
 					</TextBox.Text>
-				</validation:ValidatedTextBox>
+				</TextBox>
 			</AdornerDecorator>
 		</StackPanel>
 		<StackPanel
@@ -77,16 +78,14 @@
 				HorizontalAlignment="Left"
 				Style="{DynamicResource BasicTextStyle}"
 				Margin="0,10,0,5"
-				Text="{localization:Localization PortForm}" />
-			<textBoxes:NumericTextBox
-				Name="PortBox"
-				MinValue="0"
-				MaxValue="65535"
+				Text="PortForm" />
+			<TextBox
+				x:Name="PortBox"
 				HorizontalAlignment="Stretch"
 				Style="{DynamicResource TextBox}"
 				IsEnabled="{Binding IsChecked, ElementName=UseManualProxyCheckBox}"
 				Text="{Binding ProxyPort, Mode=TwoWay}"
-				AutomationProperties.Name="{localization:Localization PortForm}" />
+				AutomationProperties.Name="PortForm" />
 		</StackPanel>
 	</Grid>
 	<TextBlock
@@ -94,32 +93,30 @@
 		VerticalAlignment="Center"
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,10,0,5"
-		Text="{localization:Localization UserNameForm}" />
+		Text="UserNameForm" />
 	<TextBox
 		Name="UserNameBox"
 		HorizontalAlignment="Stretch"
 		TextWrapping="NoWrap"
 		Text="{Binding ProxyUsername, Mode=TwoWay}"
 		IsEnabled="{Binding IsChecked, ElementName=UseManualProxyCheckBox}"
-		AutomationProperties.Name="{localization:Localization UserNameForm}" />
+		AutomationProperties.Name="UserNameForm" />
 	<TextBlock
 		HorizontalAlignment="Left"
 		VerticalAlignment="Top"
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,10,0,5"
-		Text="{localization:Localization PasswordForm}" />
+		Text="PasswordForm" />
 	<PasswordBox
 		Name="PasswordBox"
-		textBoxes:PasswordHelper.Attach="True"
 		IsEnabled="{Binding IsChecked, ElementName=UseManualProxyCheckBox}"
-		textBoxes:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-		AutomationProperties.Name="{localization:Localization PasswordForm}" />
+		AutomationProperties.Name="PasswordForm" />
 	<TextBlock
 		Name="CapsLockTextBlock"
 		HorizontalAlignment="Center"
 		Margin="0,5,0,0"
 		IsEnabled="False"
-		Text="{localization:Localization CapsLockIsOn}">
+		Text="CapsLockIsOn">
 		<FrameworkElement.Style>
 			<Style
 				TargetType="{x:Type TextBlock}">
