--- a/Src/WindowsDeviceRecoveryTool/States/Settings/PreferencesView.xaml
+++ b/Src/WindowsDeviceRecoveryTool/States/Settings/PreferencesView.xaml
@@ -5,7 +5,8 @@
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,0,0,5"
 		Text="{localization:Localization AccentColor}" />
-	<ComboBox
+	
+    <!--ComboBox
 		Name="ColorsComboBox"
 		ItemContainerStyle="{DynamicResource PreferencesComboBoxItem}"
 		IsSynchronizedWithCurrentItem="True"
@@ -33,12 +34,14 @@
 				</StackPanel>
 			</DataTemplate>
 		</ItemsControl.ItemTemplate>
-	</ComboBox>
+	</ComboBox-->
+    
 	<TextBlock
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,10,0,5"
 		Text="{localization:Localization Theme}" />
-	<ComboBox
+	
+    <!--ComboBox
 		Name="ThemesComboBox"
 		ItemContainerStyle="{DynamicResource PreferencesComboBoxItem}"
 		IsSynchronizedWithCurrentItem="True"
@@ -46,13 +49,15 @@
 		HorizontalAlignment="Left"
 		ItemsSource="{Binding ThemeList}"
 		SelectedItem="{Binding SelectedTheme, Mode=TwoWay}"
-		AutomationProperties.Name="{localization:Localization Theme}"
-		SelectionChanged="OnStyleComboBoxSelectionChanged" />
-	<TextBlock
+		AutomationProperties.Name="Theme"
+		SelectionChanged="OnStyleComboBoxSelectionChanged" /-->
+	
+    <TextBlock
 		Style="{DynamicResource BasicTextStyle}"
 		Margin="0,10,0,5"
 		Text="{localization:Localization Language}" />
-	<ComboBox
+	
+    <!--ComboBox
 		Name="LanguagesComboBox"
 		ItemContainerStyle="{DynamicResource PreferencesLanguageComboBoxItem}"
 		IsSynchronizedWithCurrentItem="True"
@@ -63,7 +68,8 @@
 		SelectedItem="{Binding SelectedLanguage, Mode=TwoWay}"
 		AutomationProperties.Name="{localization:Localization Language}"
 		PreviewKeyDown="OnLanguagesComboBoxPreviewKeyDown"
-		SelectionChanged="OnLanguagesComboBoxSelectionChanged" />
+		SelectionChanged="OnLanguagesComboBoxSelectionChanged" /-->
+            
 	<StackPanel
 		Margin="-5,20,0,0">
 		<Button
