--- a/Src/WindowsDeviceRecoveryTool/States/Help/MainHelpView.xaml
+++ b/Src/WindowsDeviceRecoveryTool/States/Help/MainHelpView.xaml
@@ -1,5 +1,14 @@
 <ScrollViewer
-	x:Class="Microsoft.WindowsDeviceRecoveryTool.States.Help.MainHelpView" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:l="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Localization;assembly=Microsoft.WindowsDeviceRecoveryTool.Localization" xmlns:framework="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Framework" xmlns:resources="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Resources" xmlns:help="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Help" xmlns:behaviors="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Styles.Behaviors;assembly=Microsoft.WindowsDeviceRecoveryTool.Styles"
+	x:Class="Microsoft.WindowsDeviceRecoveryTool.States.Help.MainHelpView" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:l="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Localization;assembly=Microsoft.WindowsDeviceRecoveryTool.Localization" 
+    xmlns:framework="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Framework" 
+    xmlns:resources="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Resources" 
+    xmlns:help="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Help" 
+    xmlns:behaviors="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Styles.Behaviors;assembly=Microsoft.WindowsDeviceRecoveryTool.Styles"
 	Name="RootElement"
 	HorizontalScrollBarVisibility="Disabled"
 	VerticalScrollBarVisibility="Auto"
