--- a/Src/WindowsDeviceRecoveryTool/States/Shell/ShellView.xaml
+++ b/Src/WindowsDeviceRecoveryTool/States/Shell/ShellView.xaml
@@ -1,24 +1,37 @@
 <ContentControl
-	x:Class="Microsoft.WindowsDeviceRecoveryTool.States.Shell.ShellView" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:framework="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Framework" xmlns:resources="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Resources" xmlns:controls="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Controls" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:threading="clr-namespace:System.Windows.Threading;assembly=WindowsBase" xmlns:converters="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Styles.Converters;assembly=Microsoft.WindowsDeviceRecoveryTool.Styles"
-	Focusable="False" xmlns:shell="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Shell"
-	MouseLeftButtonDown="ShellView_OnMouseLeftButtonDown"
+	x:Class="Microsoft.WindowsDeviceRecoveryTool.States.Shell.ShellView" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:framework="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Framework" 
+    xmlns:resources="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Resources" 
+    xmlns:controls="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Controls" 
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+    xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+    xmlns:threading="clr-namespace:System.Windows.Threading;assembly=WindowsBase" 
+    xmlns:converters="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.Styles.Converters;assembly=Microsoft.WindowsDeviceRecoveryTool.Styles"
+	Focusable="False" xmlns:shell="clr-namespace:Microsoft.WindowsDeviceRecoveryTool.States.Shell" 
+    MouseLeftButtonDown="ShellView_OnMouseLeftButtonDown"
 	MouseRightButtonDown="ShellView_OnMouseRightButtonDown"
 	PreviewKeyDown="ShellView_OnPreviewKeyDown"
 	Unloaded="ShellView_OnUnloaded">
 	<FrameworkElement.Resources>
+        
 		<ResourceDictionary>
 			<threading:DispatcherTimer
 				Interval="0:0:0.1"
 				x:Key="FocusDelayTimer"
 				Tick="FocusDelayTimer_OnTick" />
-			<!--converters:StringNullOrEmptyToVisibilityConverter
-				Collapse="False"
-				x:Key="StringNullOrEmptyToVisibilityConverter" /-->
-		</ResourceDictionary>
+		     <converters:StringNullOrEmptyToVisibilityConverter 
+                 Collapse="False"	
+                 x:Key="StringNullOrEmptyToVisibilityConverter" />
+        </ResourceDictionary>
 	</FrameworkElement.Resources>
-	<Grid>
-		<controls:GenericRoot
-		    x:Name="GenericRoot1"
+	
+    <Grid>
+            <controls:GenericRoot
+		    x:Name="GenericRoot"
 			KeyboardNavigation.TabNavigation="Cycle"
 			KeyboardNavigation.IsTabStop="False"
 			FocusVisualStyle="{x:Null}"
@@ -82,19 +95,19 @@
 					KeyboardNavigation.TabNavigation="None"
 					FocusVisualStyle="{x:Null}">
 					
-                    <!--controls:NotificationControl
+                    <controls:NotificationControl
 						Margin="10,0,-80,0"
 						HeaderStyle="{DynamicResource SubheaderTextStyle}"
 						MessageStyle="{DynamicResource BasicTextStyle}"
 						ShowNotification="{Binding IsNotificationVisible}"
 						NotificationText="{Binding NotificationText}"
 						NotificationHeader="{Binding NotificationHeader}" 
-                      /-->
+                      />
                     
 				</ContentControl>
 				
-                <!--controls:MainAreaControl
-					Name="MainContent"
+                <controls:MainAreaControl
+					x:Name="MainContent"
 					ContentChanged="MainContent_OnContentChanged"
 					Grid.Column="1"
 					Grid.Row="1"
@@ -102,13 +115,9 @@
 					VerticalAlignment="Stretch"
 					framework:RegionManager.RegionName="{x:Static resources:Consts.MainArea}"
 					Focusable="False"
-					FocusVisualStyle="{x:Null}" 
-                /-->
+					FocusVisualStyle="{x:Null}" />
 
-                <!--
-                framework:RegionManager.RegionName="{x:Static resources:Consts.SettingsArea}"
-                -->
-                    <ContentControl
+                <ContentControl
 					Grid.Column="0"
 					Grid.ColumnSpan="3"
 					Grid.Row="1"
@@ -116,16 +125,17 @@
 					HorizontalAlignment="Stretch"
 					HorizontalContentAlignment="Stretch"
 					Grid.RowSpan="2"
-					Focusable="False"
+					framework:RegionManager.RegionName="{x:Static resources:Consts.SettingsArea}"
+                    Focusable="False"
 					FocusVisualStyle="{x:Null}">
-					<!--controls:SettingsControl
-						Name="SettingsControl"
+                    <controls:SettingsControl
+						x:Name="SettingsControl"
 						HorizontalAlignment="Stretch"
 						Margin="-10,0,-10,0"
 						MinHeight="50"
-						VerticalAlignment="Bottom" /-->
-				</ContentControl>
-			</Grid>
+						VerticalAlignment="Bottom" />
+                </ContentControl>
+            </Grid>
 		</controls:GenericRoot>
         
 		<StackPanel
@@ -144,5 +154,6 @@
 				VerticalAlignment="Center"
 				Text="{Binding BusyMessage}" />
 		</StackPanel>
+        
 	</Grid>
 </ContentControl>
